--- a/HUB/templates/cart.html
+++ b/HUB/templates/cart.html
@@ -18,8 +18,8 @@
     {% endcomment %}
 
     <a href="{%url 'logout'%}">Logout</a>
-    <a href="{%url 'register-page'%}">Register</a>
-    <a href="{%url 'login-page'%}">Login</a>
+    {% comment %} <a href="{%url 'register-page'%}">Register</a> {% endcomment %}
+    {% comment %} <a href="{%url 'login-page'%}">Login</a> {% endcomment %}
     <a href="{%url 'gallery-page'%}">Gallery</a>
 
     <a href="{%url 'cart-page'%}">Menu</a>
