--- a/HUB/templates/home.html
+++ b/HUB/templates/home.html
@@ -1,29 +1,25 @@
 {% extends 'base.html' %} {%block content%}
 
-<body>
-  <div class="homehours">
-    <p>Hours</p>
+<div class="homehours">
+  <p>Hours</p>
 
-    <p>Tues - Fri 6:30am - 2pm</p>
-    <p style="font-weight: bolder; color: #83c7c0">
-      ___________________________
-    </p>
-    <p>Saturday 8am - 2pm</p>
-    <p style="font-weight: bolder; color: #83c7c0">
-      ___________________________
-    </p>
-    <p>Sunday and Monday Closed</p>
+  <p>Tues - Fri 6:30am - 2pm</p>
+  <p style="font-weight: bolder; color: #83c7c0">___________________________</p>
+  <p>Saturday 8am - 2pm</p>
+  <p style="font-weight: bolder; color: #83c7c0">___________________________</p>
+  <p>Sunday and Monday Closed</p>
 
-    <div class="contactimage">
-      <h3 class="followus">Follow Us</h3>
-      <a href="https://www.facebook.com/TheHubWV">
-        <img class="facebookImage" src="static/images/facebook.png" />
-      </a>
-    </div>
+  <div class="contactimage">
+    <h3 class="followus">Follow Us</h3>
+    <a href="https://www.facebook.com/TheHubWV">
+      <img class="facebookImage" src="static/images/facebook.png" />
+    </a>
   </div>
-  <div class="reviewsBackground">
-    <p class="whatPeopleSay">WHAT PEOPLE SAY</p>
+</div>
 
+<div class="reviewsBackground">
+  <p class="whatPeopleSay">WHAT PEOPLE SAY</p>
+  <div>
     <div class="divBox1">
       <h3 class="reviewsName">Tina Ward Sikma</h3>
       <p class="tinaReviewParagraph">
@@ -32,44 +28,47 @@
         experience great. You should go support this young family. I can't eat
         them but those pastries looked AMAZING! Eat more for me.
       </p>
-      <img class="quotationSize" src="static/images/newquotation.png"
+      <img class="quotationSize" src="static/images/newquotation.png" />
     </div>
+  </div>
 
-    <div>
-      <div class="divBox2">
-        <h3 class="reviewsName">Katie Lund</h3>
-
-        <p class="katieReviewParagraph">
-          The Hub Bistro is a wonderful place for breakfast and lunch! Their
-          coffee is absolutely delicious and they offer a sugar free option for
-          every coffee flavor. Their cinnamon roll is one of the best I've ever
-          had. The service is friendly and warm and extremely accommodating. I
-          don't know the owner personally, but just from the handful of times
-          I've met and spoken with her, I can tell she is a very special person.
-          Just precious! If you're in Water Valley and don't make a stop here,
-          you're sorely missing out.
-        </p>
-        <img class="quotationSize" src="static/images/newquotation.png"
-      </div>
+  <div>
+    <div class="divBox2">
+      <h3 class="reviewsName">Katie Lund</h3>
+      <p class="katieReviewParagraph">
+        The Hub Bistro is a wonderful place for breakfast and lunch! Their
+        coffee is absolutely delicious and they offer a sugar free option for
+        every coffee flavor. Their cinnamon roll is one of the best I've ever
+        had. The service is friendly and warm and extremely accommodating. I
+        don't know the owner personally, but just from the handful of times I've
+        met and spoken with her, I can tell she is a very special person. Just
+        precious! If you're in Water Valley and don't make a stop here, you're
+        sorely missing out.
+      </p>
+      <img class="quotationSize" src="static/images/newquotation.png" />
     </div>
-    <div>
-      <div class="divBox3">
-        <h3 class="reviewsName">Deana Terry</h3>
+  </div>
 
-        <p class="deanaReviewParagraph">
-          Food is so good! Soup yesterday was AMAZING! Had greek salad today,
-          just as good. Breakfast was also yummy! Would definitely recommend!
-        </p>
-        <img class="quotationSize" src="static/images/newquotation.png"
-      </div>
+  <div>
+    <div class="divBox3">
+      <h3 class="reviewsName">Deana Terry</h3>
+      <p class="deanaReviewParagraph">
+        Food is so good! Soup yesterday was AMAZING! Had greek salad today, just
+        as good. Breakfast was also yummy! Would definitely recommend!
+      </p>
+      <img class="quotationSize" src="static/images/newquotation.png" />
     </div>
-<div class="galleryBackground">
-  <p>ckjhgcffghjhbvgfdfhgjhjg</p>
+  </div>
 </div>
-</body>
-<footer class="footer">
-    <p class="footerWords">The Hub Bistro & Coffee House</p>
-    <p class="copy">©Makyla Person, Dylan Goad, and Justin Ashmore</p>
-</footer>
 
+<div class="ourTeamBackground">
+  <p class="ourTeam">OUR TEAM</p>
+  <p class="teamParagraph">
+    Welcome to The Hub! Your central location for hanging out with your crew.
+    Whether you're craving a warm gooey cookie, some fresh baked pies, or a cup
+    of our delicious small batch roasted coffee, we've got you covered! Come get
+    cozy with us!
+  </p>
+  <img src="static/images/team.png" alt="Employees of the Hub" />
+</div>
 {%endblock%}
