--- a/HUB/templates/register.html
+++ b/HUB/templates/register.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="{% static 'register.css' %}" />
     <title>Document</title>
   </head>
-
+  <div id="navBackground">
+    <img class="theHubWord" src="/static/images/hub.png" />
+  </div>
   <body>
     <div>
       <div>
