--- a/HUB/static/cart.css
+++ b/HUB/static/cart.css
@@ -31,6 +31,13 @@ body {
   width: 90em;
   position: fixed;
 }
+.footerWords {
+  color: white;
+}
+
+.copy {
+  color: white;
+}
 .buttons {
   color: #ffffff;
   width: 12em;
