--- a/HUB/templates/base.html
+++ b/HUB/templates/base.html
@@ -11,8 +11,8 @@
   <div id="navBackground">
     <img class="theHubWord" src="/static/images/hub.png" />
     <a href="{%url 'logout'%}">Logout</a>
-    <a href="{%url 'register-page'%}">Register</a>
-    <a href="{%url 'login-page'%}">Login</a>
+    {% comment %} <a href="{%url 'register-page'%}">Register</a> {% endcomment
+    %} {% comment %} <a href="{%url 'login-page'%}">Login</a> {% endcomment %}
     <a href="{%url 'gallery-page'%}">Gallery</a>
 
     <a href="{%url 'cart-page'%}">Menu</a>
@@ -26,10 +26,13 @@
       var stripePublicKey = "<%= stripePublicKey %>";
     </script>
     <script src="{%static 'store.js' %}" defer></script>
-    <footer class="footer">
-      <p class="footerWords">The Hub Bistro & Coffee House</p>
-      <p class="copy">©Makyla Person, Dylan Goad, and Justin Ashmore</p>
-    </footer>
     {%block content%}{% endblock %}
   </body>
+  <footer class="footer">
+    <p>662-902-6889</p>
+    <p>428 N Main St Water Valley Mississippi 38965</p>
+    <p>thehubbistrowv@gmail.com</p>
+    <p class="footerWords">The Hub Bistro & Coffee House</p>
+    <p class="copy">©Makyla Person, Dylan Goad, and Justin Ashmore</p>
+  </footer>
 </html>
