--- a/HUB/static/cart.css
+++ b/HUB/static/cart.css
@@ -119,6 +119,18 @@ body {
   padding: 1em;
   border-radius: 20px;
 }
+.cart-quantity-input {
+  height: 34px;
+  width: 50px;
+  border-radius: 5px;
+  border: 1px solid #56ccf2;
+  background-color: #eee;
+  color: #333;
+  padding: 0;
+  text-align: center;
+  font-size: 1.2em;
+  margin-right: 25px;
+}
 
 .footer {
   left: 0;
