Co-authored-by: makylaperson43 <makylaperson43@users.noreply.github.com>

--- a/HUB/static/register.css
+++ b/HUB/static/register.css
@@ -10,10 +10,10 @@ html {
 }
 
 .user_card_register {
-  width: 400px;
+  width: 600px;
   background: white;
-  margin-top: 85px;
-  margin-bottom: 4em;
+  margin-top: 12.5em;
+
   padding: 50px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),
@@ -22,32 +22,53 @@ html {
     0 6px 20px 0 rgba(0, 0, 0, 0.19);
   justify-content: center;
   position: relative;
-  display: flex;
+  display: flexbox;
   flex-direction: column;
   border-radius: 5px;
-  margin-left: 355px;
+  margin-left: 400px;
   color: black;
 }
-@media only screen and (max-width: 1100px) {
+@media only screen and (max-width: 3000px) {
   .user_card_register {
-    margin-left: 19em;
-    width: 300px;
+    margin-top: 5em;
+    width: 2000px;
+
+    font-size: 5em;
+  }
+}
+@media only screen and (max-width: 1500px) {
+  .user_card_register {
+    margin-top: 12.5em;
+    width: 600px;
+
+    font-size: 1em;
+  }
+}
+
+@media only screen and (max-width: 1200px) {
+  .user_card_register {
+    margin-top: 10em;
+    margin-left: 11em;
+    width: 500px;
+    font-size: 1.5em;
   }
 }
 @media only screen and (max-width: 770px) {
   .user_card_register {
-    margin-left: 14em;
-    width: 200px;
+    margin-left: 17em;
+    width: 400px;
+    font-size: 10px;
   }
 }
 @media only screen and (max-width: 600px) {
   .user_card_register {
-    margin-left: 1.5em;
-    width: 180px;
+    margin-left: 4em;
+    width: 300px;
+    font-size: 10px;
   }
 }
 .container {
-  margin-top: 5em;
+  margin-top: 10em;
   padding-bottom: 1em;
 
   justify-content: center;
@@ -96,11 +117,16 @@ html {
   text-decoration: none;
 }
 .register_word {
+  text-align: center;
 }
-
-/* .register_text_box{
-
-} */
+@media only screen and (max-width: 3000px) {
+  .register_word {
+    font-size: 1em;
+  }
+}
+.move {
+  text-align: center;
+}
 
 .register_button {
   background-color: #83c7c0;
