--- a/HUB/templates/register.html
+++ b/HUB/templates/register.html
@@ -25,9 +25,8 @@
     <img class="theHubWord" src="/static/images/hub.png" />
   </div>
   <body>
-    <div>
-      <div>
-        <div class="container">
+    
+        
           <div class="user_card_register">
             <div>
               <h3 class="register_word">CREATE AN ACCOUNT</h3>
@@ -64,19 +63,18 @@
 
           {{form.errors}}
 
-          <div>
+          <div class="move">
             <a
             href="{% url 'login-page' %}"
             class="ml-2"
-            <div
+            
             class="d-flex justify-content-center colorl"
-            >Already have an account?</a
-          >
+            >Already have an account?</a>
             </div>
           </div>
         </div>
       </div>
-    </div>
+   
   </body>
 
   <footer class="footer">
