--- a/HUB/static/cart.css
+++ b/HUB/static/cart.css
@@ -26,6 +26,10 @@ body {
   top: 0;
   width: 100%;
 }
+
+.navBackground a {
+  font-size: 1.5vw;
+}
 @media only screen and (max-width: 600px) {
   .navBackground {
     width: 100%;
@@ -249,4 +253,35 @@ body {
   .sidenav a {
     font-size: 18px;
   }
+}
+
+.contactAlignNumber {
+  margin-left: -950px;
+  font-size: large;
+  color: white;
+}
+
+.contactAlignEmail {
+  margin-left: 950px;
+  margin-top: -35px;
+  font-size: large;
+  color: white;
+}
+
+.contactAlignAddress {
+  margin-top: -35px;
+  font-size: large;
+  color: white;
+}
+.footer {
+  width: 100%;
+  padding-bottom: 0%;
+  background-color: #83c7c0;
+  text-align: center;
+  padding-top: 1%;
+}
+.footerWords {
+  color: white;
+  font-family: cursive;
+  margin-bottom: -0.2%;
 }
