--- a/HUB/templates/base.html
+++ b/HUB/templates/base.html
@@ -17,7 +17,6 @@
 
     <a href="{%url 'cart-page'%}">Menu</a>
 
-
     <a href="{%url 'home-page'%}">Home</a>
   </div>
   <body>
@@ -35,6 +34,6 @@
     </p>
     <p class="contactAlignEmail">thehubbistrowv@gmail.com</p>
     <p class="footerWords">The Hub Bistro & Coffee House</p>
-    <p class="copy">©Makyla Person, Dylan Goad, and Justin Ashmore</p>
+    <p class="footerWords">©Makyla Person, Dylan Goad, and Justin Ashmore</p>
   </footer>
 </html>
