--- a/HUB/templates/cart.html
+++ b/HUB/templates/cart.html
@@ -36,26 +36,21 @@
     </div>
     <div id="main">
       <img class="theHubWord" src="/static/images/hub.png" />
-
+      <span
+        style="
+          font-size: 30px;
+          margin-left: 0em;
+          margin-top: -0.2em;
+          cursor: pointer;
+        "
+        onclick="openNav()"
+        ><i class="fa fa-shopping-cart"></i
+      ></span>
       <a href="{%url 'logout'%}">Logout</a>
-
-      <a href="{%url 'register-page'%}">Register</a>
-      <a href="{%url 'login-page'%}">Login</a>
       <a href="{%url 'gallery-page'%}">Gallery</a>
       <a href="{%url 'cart-page'%}">Menu</a>
       <a href="{%url 'home-page'%}">Home</a>
     </div>
-
-    <span
-      style="
-        font-size: 30px;
-        margin-left: 40em;
-        margin-top: -3em;
-        cursor: pointer;
-      "
-      onclick="openNav()"
-      ><i class="fa fa-shopping-cart"></i
-    ></span>
   </div>
 
   <body>
@@ -86,7 +81,12 @@
     }
   </script>
   <footer class="footer">
+    <p class="contactAlignNumber">662-902-6889</p>
+    <p class="contactAlignAddress">
+      428 N Main St Water Valley Mississippi 38965
+    </p>
+    <p class="contactAlignEmail">thehubbistrowv@gmail.com</p>
     <p class="footerWords">The Hub Bistro & Coffee House</p>
-    <p class="copy">©Makyla Person, Dylan Goad, and Justin Ashmore</p>
+    <p class="footerWords">©Makyla Person, Dylan Goad, and Justin Ashmore</p>
   </footer>
 </html>
