--- a/HUB/templates/cart.html
+++ b/HUB/templates/cart.html
@@ -21,7 +21,12 @@
         <div class="cart-item">
           <h2 class="section-header">CART</h2>
 
-          <div class="cart-row"></div>
+          <div class="cart-row">
+            <span class="cart-item cart-header cart-column">ORDER</span>
+            <span class="cart-header cart-column">PRICE</span>
+            <span class="cart-quantity cart-header cart-column">QUANTITY</span>
+            <span class="cart-quantity cart-header cart-column">ADD</span>
+          </div>
           <div class="cart-items"></div>
 
           <div class="cart-total">
