--- a/HUB/static/login.css
+++ b/HUB/static/login.css
@@ -28,39 +28,50 @@ html {
   margin-left: 355px;
   color: black;
 }
-@media only screen and (max-width: 1100px) {
+@media only screen and (max-width: 3000px) {
   .user_card_login {
-    margin-left: 17em;
+    margin-top: 5em;
+    width: 2000px;
+    margin-left: -5.5em;
+    font-size: 5em;
+  }
+}
+@media only screen and (max-width: 1500px) {
+  .user_card_login {
+    margin-top: 12.5em;
+    width: 600px;
+    margin-left: 15em;
+    font-size: 1em;
   }
 }
 
-@media (max-width: 905px) {
+@media only screen and (max-width: 1300px) {
   .user_card_login {
-    margin-left: 12em;
-    width: 20em;
+    margin-top: 10em;
+    margin-left: 10em;
+    width: 500px;
+    font-size: 1.5em;
   }
 }
-@media only screen and (max-width: 705px) {
+
+@media only screen and (max-width: 1000px) {
   .user_card_login {
-    margin-left: 8em;
-  }
-}
-@media only screen and (max-width: 650px) {
-  .user_card_login {
-    margin-left: 5em;
-    width: 20em;
+    margin-left: 14em;
+    width: 400px;
+    font-size: 10px;
   }
 }
 @media only screen and (max-width: 600px) {
   .user_card_login {
-    margin-left: 9em;
-    width: 15em;
+    margin-left: 3em;
+    width: 300px;
+    font-size: 10px;
   }
 }
-@media (max-width: 600px) {
+@media only screen and (max-width: 340px) {
   .user_card_login {
-    margin-left: 3.5em;
-    width: 15em;
+    width: 250px;
+    margin-left: -3e;
   }
 }
 
@@ -75,6 +86,30 @@ html {
   position: fixed;
   top: 0;
   width: 100%;
+}
+@media (max-width: 3000px) {
+  .login_btn {
+    height: 5em;
+    width: 15em;
+    font-size: 2em;
+  }
+}
+@media only screen and (max-width: 1450px) {
+  .login_btn {
+    height: 3em;
+    width: 10em;
+  }
+}
+
+@media only screen and (max-width: 3000px) {
+  .loginword {
+    font-size: 1em;
+  }
+}
+@media only screen and (max-width: 770px) {
+  .loginword {
+    font-size: 1.5em;
+  }
 }
 
 @media only screen and (max-width: 600px) {
