--- a/HUB/templates/login.html
+++ b/HUB/templates/login.html
@@ -27,7 +27,7 @@
           <div class="user_card_login">
             <div class="user_card">
               <div class="d-flex justify-content-center">
-                <h3 id="form-title">LOGIN</h3>
+                <h3 id="form-title" class="loginword">LOGIN</h3>
               </div>
               <div class="d-flex justify-content-center form_container">
                 <form method="POST" action="">
