--- a/HUB/templates/cart.html
+++ b/HUB/templates/cart.html
@@ -24,7 +24,7 @@
           <div class="cart-row">
             <span class="cart-item cart-header cart-column">ORDER</span>
             <span class="cart-header cart-column">PRICE</span>
-            <span class="cart-quantity cart-header cart-column">QUANTITY</span>
+            <span class="quantity-head cart-header cart-column">QUANTITY</span>
             <span class="cart-quantity cart-header cart-column">ADD</span>
           </div>
           <div class="cart-items"></div>
