--- a/HUB/static/register.css
+++ b/HUB/static/register.css
@@ -1,7 +1,8 @@
 body {
   width: 100%;
-  background-color: white;
-  background-image: none;
+  background: url("images/blurredCrop.jpg");
+  background-attachment: fixed;
+  background-size: cover;
   margin: 0;
 }
 
