--- a/HUB/templates/cart.html
+++ b/HUB/templates/cart.html
@@ -64,7 +64,9 @@
 
   <body>
     <div class="movecart">
-      <button type="button" value="1" class="buttons">Breakfast</button>
+      <button id="btn" type="button" value="1" class="buttons">
+        Breakfast
+      </button>
       <button type="button" value="2" class="buttons">Salads</button>
       <button type="button" value="3" class="buttons">Pastries & More</button>
       <button type="button" value="4" class="buttons">
