--- a/HUB/templates/login.html
+++ b/HUB/templates/login.html
@@ -58,7 +58,7 @@
                   href="{% url 'register-page' %}"
                   class="ml-2"
                   <div
-                  class="d-flex justify-content-center colorl"
+                  class="d-flex justify-content-center colorl hoverAccount"
                   >Don't have an account?</a
                 >
               </div>
