--- a/HUB/templates/cart.html
+++ b/HUB/templates/cart.html
@@ -93,6 +93,7 @@
   </script>
   <script>
     var total = "{{user_order.get_order_total}}";
+    console.log(total);
     const paypalButtonsComponent = paypal.Buttons({
       // optional styling for buttons
       // https://developer.paypal.com/docs/checkout/standard/customize/buttons-style-guide/
