--- a/HUB/templates/login.html
+++ b/HUB/templates/login.html
@@ -53,7 +53,7 @@
               {% for message in messages%}
               <p id="messages">{{message}}</p>
               {% endfor %}
-              <div>
+              <div class="move">
                 <a
                   href="{% url 'register-page' %}"
                   class="ml-2"
