--- a/HUB/static/styles.css
+++ b/HUB/static/styles.css
@@ -223,20 +223,26 @@ html {
   margin-left: 19%;
   margin-bottom: -7%;
 }
-.ourTeamBackground img {
-  width: 60%;
-  height: 75%;
-  margin-left: 19%;
-  margin-bottom: -7%;
+@media only screen and (max-width: 3000px) {
+  .ourTeamBackground img {
+    height: 60%;
+  }
 }
 
 .ourTeamBackground {
   background-color: #83c7c0;
   width: 100%;
+  height: 100%;
   color: white;
   padding: 3px 0 120px 0;
   margin-top: 150px;
   margin-bottom: 200px;
+}
+@media only screen and (max-width: 3000px) {
+  .ourTeamBackground {
+    width: 100%;
+    height: 50em;
+  }
 }
 @media only screen and (max-width: 600px) {
   .ourTeamBackground {
