--- a/HUB/templates/register.html
+++ b/HUB/templates/register.html
@@ -35,7 +35,7 @@
               <div class="d-flex justify-content-center form_container">
                 <form method="POST" action="">
                   {% csrf_token %}
-                  <p class="paslog">Username:</p>
+                  <p class="paslog">Username(first & last name):</p>
                   <div class="input-group mb-2">
                     <div class="input-group-append"></div>
                     <div class="register_text_box">{{form.username}}</div>
